<resources>
    <string name="app_name">WeatherAppAvito</string>
    <string name="weather">Weather</string>
    <string name="hours_24">24 Hours</string>
    <string name="days_7">7 Days</string>
    <string name="location">location</string>
    <string name="error">Error</string>
    <string name="error_occurred">An error occurred: %s</string>


    <string name="number_percentage">%1$1d%%</string>
    <string name="number_degrees">%1$.1f°C</string>
    <string name="temperature_min_max">%1$.1f°C - %2$.1f°C</string>
    <string name="time_string">%1$02d:%2$02d:%3$02d</string>
    <string name="load_image">https://openweathermap.org/img/wn/%1$s@2x.png</string>
    <string name="load_image_big">https://openweathermap.org/img/wn/%1$s@4x.png</string>

    <string name="humidity">Humidity</string>
    <string name="set_city_name">Set city name</string>
    <string name="set_zip_code">Set zip code</string>
    <string name="place_name">Place name</string>
    <string name="find_place">Find place</string>
    <string name="save">Save</string>
    <string name="use_current_location">Use current location</string>
    <string name="location_not_found_error">Error finding location. Try another one</string>
    <string name="location_another_error">System was unable to find requested location. Check your internet connection or choose another location</string>
    <string name="loading_response_error_current_location">Unable to get your last location. Please choose location manually</string>
    <string name="loading_response_error_selected_location">Error loading location. Try to change it</string>
</resources>