<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_20">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <EditText
        android:id="@+id/editTextEnterLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_black_touchable"
        android:hint="@string/city_name_or_zip_code"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray_40"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textViewSetName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_black_touchable"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/set_city_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnterLocation" />

    <TextView
        android:id="@+id/textViewSetZip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_black_touchable"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/set_zip_code"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/textViewSetName" />

</androidx.constraintlayout.widget.ConstraintLayout>