<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/imageViewGradient"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
            app:layout_constraintDimensionRatio="4:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageViewBackground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="16dp" />

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_black_touchable"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingEnd="12dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft">

            <ImageView
                android:id="@+id/imageViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_location_24"
                android:contentDescription="@string/location" />

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:text="Moscow"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView24Hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hours_24"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBackground" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler24Hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gray_20_not_touchable"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/textView24Hours" />

        <TextView
            android:id="@+id/textView7Days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/days_7"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/recycler24Hours" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler7Days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gray_20_not_touchable"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineLeft"
            app:layout_constraintStart_toStartOf="@+id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@+id/textView7Days" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>